# omap-media-apps

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
common/: Makefile.am  Makefile.in  application-window.c  application-window.gs  common.am  common.h  common.vapi  defaults.c  defaults.gs  error-dialog.c  error-dialog.gs  media-control.c  media-control.gs  media-window.c  media-window.gs  style.rc  utils.c  utils.gs  video-area.c  video-area.gs
imageview-app/: Makefile.am  icon-list-control.c  icon-list-control.gs  iconlist-control.c  iconlist-control.gs  image-control.c  image-control.gs  imageview-app.c  imageview-app.gs  imageview-window.c  imageview-window.gs  omap4-imageview-app.desktop
muxer-app/: Makefile.am  muxer-app.c  muxer-app.gs  muxer-config.c  muxer-config.gs  muxer-control.c  muxer-control.gs  muxer-window.c  muxer-window.gs  omap4-muxer-app.desktop  test.ini  test.xml  video-area.c
player-app/: Makefile.am  omap4-player-app.desktop  player-app.c  player-app.gs  player-window.c  player-window.gs  playlist-control.c  playlist-control.gs
